Startup og healthcheck rammeverket (#561)